v1.1 add variable limit to 5 variables to prevent too long loops with too much variables add a switch button to toggle whether to limit the number of variables or not

--- a/style.css
+++ b/style.css
@@ -88,7 +88,56 @@ footer {
     padding-bottom: 2rem;
 }
 
-input {
+.variables-limit-check-container {
+    padding: 1rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.exceed-limit-check {
+    cursor: pointer;
+    appearance: none;
+    min-width: 4rem;
+    max-width: 4rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: #010409;
+    overflow: hidden;
+    position: relative;
+}
+
+.exceed-limit-check::before {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    background-color: #af5454;
+    transform-origin: left;
+    transition: width 100ms ease-in-out;
+}
+
+.exceed-limit-check:checked::before {
+    width: 100%
+}
+
+.exceed-limit-check::after {
+    position: absolute;
+    right: 50%;
+    content: '';
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: #E6EDF3;
+    transition: all 100ms ease-in-out;
+}
+
+.exceed-limit-check:checked:after {
+    content: '';
+    right: 0;
+}
+
+#the-input {
     min-width: 7rem;
     width: 50%;
     height: 3rem;
@@ -104,7 +153,7 @@ input {
 
 .table-container {
     max-width: 100%;
-    border-radius: 2rem;
+    border-radius: 1rem;
     overflow-x: auto;
     border: none;
 }
@@ -137,7 +186,11 @@ input {
 }
 
 .result {
-    background-color: #76a6d0;
+    background-color: #54af6f;
+}
+
+.warning {
+    color: #af5454;
 }
 
 a {
